<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/Signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="100dp"
            android:text="@string/sign_up"
            android:textSize="30sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/Input_email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/Signup"
            android:layout_marginStart="17dp"
            android:layout_marginTop="55dp"
            android:hint="@string/enter_email"
            android:inputType="textEmailAddress"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/Input_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/Input_email"
            android:layout_marginStart="17dp"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/Input_C_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/Input_password"
            android:layout_marginStart="17dp"
            android:layout_marginTop="10dp"
            android:hint="@string/C_password"
            android:inputType="textPassword"
            tools:ignore="Autofill" />

        <Button
            android:id="@+id/Btn_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/Input_C_password"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:onClick="check"
            android:text="@string/sign_up"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/Btn_submit"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:onClick="redirect_sign_up"
            android:text="Want to SignIn?"
            android:textSize="20sp" />
    </RelativeLayout>

</ScrollView>