<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignIn">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/SignIn"
            android:layout_width="187dp"
            android:layout_height="58dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50sp"
            android:gravity="center|center_horizontal"
            android:text="@string/sign_in"
            android:textSize="30sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/Input_email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/SignIn"
            android:layout_marginStart="10dp"
            android:layout_marginTop="60dp"
            android:hint="@string/enter_email"
            android:inputType="textEmailAddress"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/Input_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/Input_email"
            android:layout_marginStart="10dp"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            tools:ignore="Autofill" />

        <Button
            android:id="@+id/Btn_submit_sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/Input_password"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:onClick="check"
            android:text="@string/sign_in"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/Btn_submit_sign_in"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:onClick="redirect_sign_in"
            android:text="Want to SignUp?"
            android:textSize="20sp" />
    </RelativeLayout>
</ScrollView>